--- a/ToDoList/todo_app/ToDoList/templates/edit_task.html
+++ b/ToDoList/todo_app/ToDoList/templates/edit_task.html
@@ -9,13 +9,13 @@
     <form action="{% url 'ToDoList:edit_task' task.id %}" method="POST">
       {% csrf_token %}
       {{form.as_p}}
-      <button name="submit" class="btn btn-outline-secondary btn-lg" value="edit">Save</button>
+      <button name="submit" class="btn btn-success btn-lg btn-block" value="save">Save</button>
     </form>
     <br>
     <form action="{% url 'ToDoList:edit_task' task.id%}" method="POST">
       {% csrf_token %}
-      <button name="submit" class="btn btn-danger btn-lg" value="Remove">Remove</button>
-      <input type="hidden" name="id" value="{{weekly_task.id}}">
+      <br>
+      <button name="submit" class="btn btn-danger btn-lg btn-block" value="delete">Remove</button>
     </form>
   </a>
 </div>
