--- a/ToDoList/todo_app/ToDoList/templates/tasks.html
+++ b/ToDoList/todo_app/ToDoList/templates/tasks.html
@@ -12,7 +12,7 @@
     <a class="nav-link active" href="{% url 'ToDoList:tasks' %}">Tasks</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Goals</a>
+    <a class="nav-link" href="{% url 'Projects:projects' %}">Projects</a>
   </li>
 </ul>
 <br>
