Add a new app projects and some improvements

--- a/ToDoList/todo_app/ToDoList/templates/index.html
+++ b/ToDoList/todo_app/ToDoList/templates/index.html
@@ -376,6 +376,7 @@
           <ol>
             <li>Able to create tasks and manage them</li>
             <li>Make your weekly program to include every task you do everyday</li>
+            <li>Manage your projects</li>
             <li>Provide statistics to show your progress</li>
             <li>User account system</li>
           </ol>
@@ -394,9 +395,28 @@
       </div>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
         <div class="card-body">
-          This app has two kind of tasks weekly and non-weekly,when you add a task you can mark it as weekly or not.
-          Then you provide some additional information which is optional.Finally you can view the tasks and
-          there are splitted into three sorts finished,unfinished and weekly!
+          Three categories:
+          <div id="list-example" class="list-group">
+            <a class="list-group-item list-group-item-action" href="#list-item-1">Weekly tasks</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-2">Normal tasks</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-3">Projects</a>
+          </div>
+          <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
+            <h4 id="list-item-1">Weekly tasks</h4>
+            <p>
+              To put a constant plan to achieve something or daily tasks organized in a weekly program
+            </p>
+            <h4 id="list-item-2">Normal tasks</h4>
+            <p>
+              Just normal tasks so you won't forget them or you can make people make them
+              to do a project (checked as project True)
+            </p>
+            <h4 id="list-item-3">Projects</h4>
+            <p>
+              Make a project to cooperate with people to finish stuff that matters to you
+            </p>
+          </div>
+          with the ability to add edit or remove them
         </div>
       </div>
     </div>
